--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -515,7 +515,7 @@
   .nav__title {
     color: #fff;
     font-size: $type-size-6;
-    background: $primary-color;
+    background: #ffdef7;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
   }
