--- a/_sass/minimal-mistakes/skins/_pink.scss
+++ b/_sass/minimal-mistakes/skins/_pink.scss
@@ -6,10 +6,10 @@
 $background-color: #ffedf0 !default;
 $text-color: #4a353b !default;
 $muted-text-color: #6e4259 !default;
-$primary-color: #fcb1dd !default;
+$primary-color: #ffd4ea !default;
 $border-color: mix(#fff, #393e46, 75%) !default;
 $footer-background-color: $primary-color !default;
-$link-color: #b2a6ed !default;
+$link-color: #a38c9c !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
