--- a/_sass/minimal-mistakes/skins/_pink.scss
+++ b/_sass/minimal-mistakes/skins/_pink.scss
@@ -6,7 +6,7 @@
 $background-color: #ffedf0 !default;
 $text-color: #4a353b !default;
 $muted-text-color: #6e4259 !default;
-$primary-color: #ffd4ea !default;
+$primary-color: #ffa8bf !default;
 $border-color: mix(#fff, #393e46, 75%) !default;
 $footer-background-color: $primary-color !default;
 $link-color: #a38c9c !default;
